# Metaheurisitca-UGR

./: README.md
Practica1/: main.cpp  makefile  practica1
Practica1/Latex1/: P1.aux  P1.out  P1.tex  P1.toc  P1mod.tex
Practica1/Latex1/Resultados/: BLs.txt  datos_obligatorios.txt  relief_modificado.txt
Practica2/: main.cpp  makefile  practica2  script1.sh  script2.sh  script3.sh
Practica2/Latex/: P2.aux  P2.out  P2.tex  P2.toc
Practica2/Resultados/: medias  ozone  parkinson  spectf_heart
Practica3/: main.cpp  makefile  practica3  script1.sh
Practica3/Latex/: P3.aux  P3.out  P3.tex  P3.toc  resultados
PracticaOpcional/Code/: CMakeLists.txt  README.md  algoritmo.h  main.cpp
